fix line spacing for the ellipsis courses div

--- a/extensions/Reporting/Report/SpecialPages/CSGARS/Sops/style.css
+++ b/extensions/Reporting/Report/SpecialPages/CSGARS/Sops/style.css
@@ -296,8 +296,8 @@ table.wikitable tr.deleted {
 
 .ellipsis {
   overflow: hidden;
-  max-height: 100px;
-  line-height: 25px;
+  max-height: 95px;
+  line-height: 1.5em;
   display: inline-block;
 }
 
@@ -320,7 +320,7 @@ table.wikitable tr.deleted {
   -moz-box-sizing: content-box;
 
   float: right; position: relative;
-  top: -25px; left: 100%; 
+  top: -20px; left: 100%; 
   width: 3em; margin-left: -3em;
   padding-right: 5px;
   
